Opened 14 years ago

Closed 14 years ago

#1234 closed defect (fixed)

flic in avi doesn't decode

Reported by: ami_stuff Owned by:
Priority: normal Component: undetermined
Version: git-master Keywords: flic
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

http://www.datafilehost.com/download-babe5a51.html

works fine with original codec

C:\>ffmpeg -i autodeskflc.avi out.avi
ffmpeg version N-39881-gdcd207c Copyright (c) 2000-2012 the FFmpeg developers
  built on Apr 17 2012 02:23:18 with gcc 4.5.0 20100414 (Fedora MinGW 4.5.0-1.fc
14)
  configuration: --prefix=/var/www/users/research/ffmpeg/snapshots/build --arch=
x86 --target-os=mingw32 --cross-prefix=i686-pc-mingw32- --cc='ccache i686-pc-min
gw32-gcc' --enable-w32threads --enable-memalign-hack --enable-runtime-cpudetect
--enable-cross-compile --enable-static --disable-shared --extra-libs='-lws2_32 -
lwinmm' --extra-cflags='--static -I/var/www/users/research/ffmpeg/snapshots/buil
d/include' --extra-ldflags='-static -L/var/www/users/research/ffmpeg/snapshots/b
uild/lib' --enable-bzlib --enable-zlib --enable-gpl --enable-version3 --enable-n
onfree --enable-libx264 --enable-libspeex --enable-libtheora --enable-libvorbis
--enable-libfaac --enable-libxvid --enable-libopencore-amrnb --enable-libopencor
e-amrwb --enable-libmp3lame --enable-libvpx --disable-decoder=libvpx
  libavutil      51. 46.100 / 51. 46.100
  libavcodec     54. 14.101 / 54. 14.101
  libavformat    54.  3.100 / 54.  3.100
  libavdevice    53.  4.100 / 53.  4.100
  libavfilter     2. 70.100 /  2. 70.100
  libswscale      2.  1.100 /  2.  1.100
  libswresample   0. 11.100 /  0. 11.100
  libpostproc    52.  0.100 / 52.  0.100
[flic @ 0x23276e0] Expected extradata of 12, 128 or 1024 bytes
    Last message repeated 1 times
Input #0, avi, from 'autodeskflc.avi':
  Duration: 00:00:12.59, start: 0.000000, bitrate: 6573 kb/s
    Stream #0:0: Audio: mp3 (U[0][0][0] / 0x0055), 22050 Hz, stereo, s16, 56 kb/
s
    Stream #0:1: Video: flic (AFLC / 0x434C4641), 320x240, 23.97 tbr, 23.97 tbn,
 23.97 tbc
Video pixel format is unknown, stream cannot be encoded

Change History (2)

comment:1 by Carl Eugen Hoyos, 14 years ago

Keywords: flic added
Reproduced by developer: set
Status: newopen
Version: unspecifiedgit-master

Extradata size is 904, works fine with mplayer -vc fffli

comment:2 by Carl Eugen Hoyos, 14 years ago

Resolution: fixed
Status: openclosed

Should be fixed.

Note: See TracTickets for help on using tickets.