Support flicvideo with 904 bytes extradata.

Fixes ticket #1234.